tests/NormalTests/paczka2/big_fuzzy/60269253.err
Error in line 2: j1h7sVjDrYq S244 2,6
Error in line 7: Ke6mM S519 35,5
Error in line 4: j1h7sVjDrYq S519 50,3
Error in line 14: Ke6mM S244 107,5
Error in line 15: S989 S519 63,7
Error in line 38: iECAUY7Mikq A313 60,3
Error in line 21: j1h7sVjDrYq S989 150,8
Error in line 52: xgYSt5nGBA S244 57,7
Error in line 60: j1h7sVjDrYq S989 87,3
Error in line 62: Ke6mM S519 9,0
Error in line 73: xgYSt5nGBA S519 92,1
Error in line 79: iECAUY7Mikq A313 0,6
Error in line 88: amk,yKUklA S989 110,1
Error in line 85: amk2yKUklA S989 80,4
Error in line 92: amk2yKUklA S2 85,2
Error in line 80: iECAUY7Mikq S519 31,0
Error in line 94: amk2yKUklA S244 75,8
Error in line 99: j1h7sVjDrYq A313 28,2
Error in line 107: j1h7sVjDrYq S989 36,3
Error in line 124: xgYSt5nGBA A313 35,5
Error in line 125: xgYSt5nGBA S244 2,6
Error in line 110: 83vWzVIx S989 53,5
Error in line 127: 83vWzVIx S519 52,9
Error in line 114: j1h7sVjDrYq S519 84,5
Error in line 141: amk2yKUklA N989 78,9
Error in line 133: amk2yKUklA S989 80,5
Error in line 166: amk2yKUklA A313 16,9
Error in line 162: xgYSt5nGBA S519 35,3
Error in line 164: S989 S519 56,7
Error in line 176: S989 S989 24,5
Error in line 195: 83vWzVIx S519 131
Error in line 198: iECAUY7Mikq S989 39,6
Error in line 203: 83vWzVIx S244 46,9
Error in line 211: xgYSt5nGBA S519 42,8
Error in line 224: S989 S519 53,4
Error in line 230: Ke6mM S519 86,3
Error in line 235: iECAUY7Mikq Sv19 1,4
Error in line 228: iECAUY7Mikq S519 70,9
Error in line 231: Ke6mM S244 37,7
Error in line 241: xgYSt5nGBA S989 33,4
Error in line 247: 83vWzVIx A313 27,7
